Add separate self-service SSO docs (#906)
* Add self-service materials

* Update self-service

* Update Premium callout for self-service pages

* Remove migration notice from non self-serve pages

* Fixes

* Revert non self-serve SAML

* Fix images in self-serve

* Copyedit migration notice

* Add availability page

* Add migration banner

* Update banner

* Add back missing images

* Add Okta OIDC stub

* Make Setup steps generic to OIDC/SAML

* Align Okta SAML instructions

* OIDC edits

* Add self-serve to Enterprise nav

* Edit migration and availability guide

* Move up prereqs

* Shared component cleanup

* Update Okta OIDC guide

* Update steps for OIDC vs SAML

* Vale

* Clean up

* Add note

* Copyedit

* Copyedit

--- a/src/content/graphos/enterprise/config.json
+++ b/src/content/graphos/enterprise/config.json
@@ -38,7 +38,59 @@
       "Audit Log": "https://www.apollographql.com/docs/graphos/org/audit-log",
       "Okta SSO": "https://www.apollographql.com/docs/graphos/org/sso/okta-integration-guide",
       "Microsoft Entra ID SSO": "https://www.apollographql.com/docs/graphos/org/sso/azure-ad-integration-guide",
-      "SAML SSO": "https://www.apollographql.com/docs/graphos/org/sso/saml-integration-guide"
+      "SAML SSO": "https://www.apollographql.com/docs/graphos/org/sso/saml-integration-guide",
+      "Self-Service SSO": [{
+        "Migration Guide": "https://www.apollographql.com/docs/graphos/org/sso/self-service/migration",
+        "Availability": "https://www.apollographql.com/docs/graphos/org/sso/self-service/availability", 
+        "SAML": {
+          "Okta": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/saml-okta",
+            [
+              "enterprise"
+            ]
+          ],
+          "Microsoft Entra ID": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/saml-microsoft-entra-id",
+            [
+              "enterprise"
+            ]
+          ],
+          "Generic SAML Setup": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/saml-integration-guide",
+            [
+              "enterprise"
+            ]
+          ]
+        },
+        "OIDC": {
+          "Okta": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/oidc-okta",
+            [
+              "enterprise"
+            ]
+          ],
+          "Microsoft Entra ID": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/oidc-microsoft-entra-id",
+            [
+              "enterprise"
+            ]
+          ],
+          "Generic OIDC Setup": [
+            "https://www.apollographql.com/docs/graphos/org/sso/self-service/oidc-integration-guide",
+            [
+              "enterprise"
+            ]
+          ]
+        }
+      },
+      true
+    ],
+      "Multi-organization": [
+        "https://www.apollographql.com/docs/graphos/org/sso/multi-organization",
+        [
+          "enterprise", "preview"
+        ]
+      ]
     },
     "Metrics & Reporting": {
       "Datadog Forwarding": "https://www.apollographql.com/docs/graphos/metrics/datadog-integration",
