Add custom schema checks (#930)
* Add custom check to overview

* Add raw custom check doc

* Vale

* Add relevant pointers

* Edit

* Vale

* Schema check edits (#931)

* Edits

* Copyedit

* Vale

* Add relevant pointers

* Fixes

* Copyedit

* Copyedit

* Copyedit

* Apply suggestions from code review

Co-authored-by: Samuel Collard <swcollard@users.noreply.github.com>

* Review suggestions and other edits

* Edit

* Remove image for now

* Update check configuration screenshot

* Copyedit

* Update HMAC example

* Add check run screenshot

* Add screenshot and copyedits

* Vale

---------

Co-authored-by: Samuel Collard <swcollard@users.noreply.github.com>

--- a/src/content/graphos/delivery/config.json
+++ b/src/content/graphos/delivery/config.json
@@ -20,6 +20,10 @@
     "Schema Checks": {
       "Overview": "/schema-checks",
       "Run Schema Checks": "/run-checks",
+      "Custom Checks": ["/custom-checks",
+      [
+        "enterprise"
+      ]],
       "Check Configurations": "/check-configurations",
       "Connect to GitHub": "/github-integration",
       "Checks Reference": "/checks-reference"
